enhance(openclose) examples